--- a/Phone/main/res/layout/register_help_strength_item.xml
+++ b/Phone/main/res/layout/register_help_strength_item.xml
@@ -7,7 +7,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentLeft="true"
-        android:layout_marginTop="8dp"
+        android:layout_marginTop="4dp"
         android:text="@string/account_info_help_level1"
         style="@style/title_copy"/>
 
@@ -16,7 +16,8 @@
         android:layout_width="75dp"
         android:layout_height="15dp"
         android:layout_alignParentRight="true"
-        android:layout_alignTop="@id/reg_help_strength_level"
+        android:layout_alignBottom="@id/reg_help_strength_level"
+        android:layout_marginBottom="6dp"
         android:background="@drawable/rounded_red_bar" />
 
     <View
@@ -36,7 +37,7 @@
         android:layout_height="wrap_content"
         android:layout_alignParentLeft="true"
         android:layout_below="@id/reg_help_strength_level"
-        android:layout_marginTop="8dp"
+        android:layout_marginTop="4dp"
         android:text="@string/account_info_help_action1"
         style="@style/body_copy" />
 
