--- a/Phone/main/res/layout/register_enter_account_info.xml
+++ b/Phone/main/res/layout/register_enter_account_info.xml
@@ -1,189 +1,188 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/account_info_scroll_view"
-   	style="@style/WhiteTheme"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent" >
 
-    <RelativeLayout
+    <com.discover.mobile.navigation.HeaderProgressIndicator
+        android:id="@+id/header"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content" />
+
+    <ScrollView
+        android:id="@+id/account_info_scroll_view"
+        style="@style/WhiteTheme"
+        android:layout_below="@+id/header"
         android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:focusable="true"
-        android:focusableInTouchMode="true" >
-        
-        <TextView
-            android:id="@+id/account_info_title_label"
-            style="@style/title_copy"
-            android:layout_alignParentLeft="true"
-            android:layout_alignParentTop="true"
-            android:text="@string/app_name"
-            android:visibility="invisible" />
-        
-        <TextView
-            android:id="@+id/account_info_label_one_label"
-            style="@style/title_copy"
-            android:text="@string/account_info_label_one" />
-         
-        <EditText
-            android:id="@+id/account_info_main_input_field"
-            android:layout_width="wrap_content"
+        android:layout_height="fill_parent" >
+
+        <RelativeLayout
+            android:layout_width="fill_parent"
             android:layout_height="wrap_content"
-            android:layout_alignLeft="@+id/account_information_input_info_label"
-            android:layout_below="@+id/account_info_label_one_label"
-            android:ems="16"
-            android:inputType="number"
-            android:maxLength="16"
-            android:paddingTop="8dp" 
-            android:imeOptions="actionDone"
-            style="@style/edit_copy"
-         >
-           
-        </EditText>
-        
-        <TextView
-            android:id="@+id/account_information_input_info_label"
-            android:layout_below="@+id/account_info_main_input_field"
-            android:paddingTop="4dp"
-            android:text="@string/account_info_input_restrictions_label"
-            style="@style/field_copy"
-        />
-        
-        <TextView
-            android:id="@+id/account_info_card_account_number_error_label"
-            style="@style/error_label"
-            android:layout_below="@+id/account_information_input_info_label"
-            android:text="@string/invalid_value" >
-            <requestFocus />
-        </TextView>
-        
-        <TextView 
-            android:id="@+id/account_info_error_label"
-			android:layout_below="@+id/account_information_input_info_label"
-			android:visibility="gone"
-			style="@style/error_label"
-		/>
+            android:focusable="true"
+            android:focusableInTouchMode="true" >
 
-        
-        
-      	<TextView
-            android:id="@+id/account_info_card_expiration_date_label"
-            style="@style/title_copy"
-            android:layout_below="@+id/account_information_input_info_label"
-            android:text="@string/card_expiration_date_text" />
-        
-        
-        <TextView
-            android:id="@+id/account_info_ssn_info_label"
-            style="@style/title_copy"
-            android:layout_below="@+id/account_info_month_spinner"
-            android:text="@string/account_info_ssn_info_text" />
+            <TextView
+                android:id="@+id/account_info_title_label"
+                style="@style/title_copy"
+                android:layout_alignParentLeft="true"
+                android:layout_alignParentTop="true"
+                android:text="@string/app_name"
+                android:visibility="invisible" />
 
-        <EditText
-            android:id="@+id/account_info_ssn_input_field"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_below="@+id/account_info_ssn_info_label"
-            android:layout_toRightOf="@+id/account_info_ssn_prefix_label"
-            android:ems="4"
-            android:imeOptions="actionDone"
-            android:inputType="number"
-            android:maxLength="4" 
-            style="@style/edit_copy"
-        />
+            <TextView
+                android:id="@+id/account_info_label_one_label"
+                style="@style/title_copy"
+                android:text="@string/account_info_label_one" />
 
-        <TextView
-            android:id="@+id/account_info_ssn_prefix_label"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentLeft="true"
-            android:layout_alignTop="@id/account_info_ssn_input_field"
-            android:layout_below="@+id/account_info_ssn_info_label"
-            android:paddingTop="8dp"
-            android:text="@string/ssn_prefix"
-            android:textColor="@color/black" />
+            <EditText
+                android:id="@+id/account_info_main_input_field"
+                style="@style/edit_copy"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignLeft="@+id/account_information_input_info_label"
+                android:layout_below="@+id/account_info_label_one_label"
+                android:ems="16"
+                android:imeOptions="actionDone"
+                android:inputType="number"
+                android:maxLength="16"
+                android:paddingTop="8dp" >
+            </EditText>
 
-        <TextView
-            android:id="@+id/account_info_ssn_error_label"
-            style="@style/error_label"
-            android:layout_alignRight="@id/account_info_ssn_input_field"
-            android:layout_below="@+id/account_info_ssn_info_label"
-            android:text="@string/invalid_value" />
+            <TextView
+                android:id="@+id/account_information_input_info_label"
+                style="@style/field_copy"
+                android:layout_below="@+id/account_info_main_input_field"
+                android:paddingTop="4dp"
+                android:text="@string/account_info_input_restrictions_label" />
 
-        
-        <TextView
-            android:id="@+id/account_info_dob_label"
-            style="@style/title_copy"
-            android:layout_below="@+id/account_info_ssn_input_field"
-            android:text="@string/account_info_dob_text" />
+            <TextView
+                android:id="@+id/account_info_card_account_number_error_label"
+                style="@style/error_label"
+                android:layout_below="@+id/account_information_input_info_label"
+                android:text="@string/invalid_value" >
 
-        <TextView
-            android:id="@+id/account_info_dob_year_error_label"
-            style="@style/error_label"
-            android:layout_alignRight="@+id/account_info_dob_year_field"
-            android:layout_below="@+id/account_info_dob_label"
-            android:text="@string/invalid_value" />
-        
-        <Spinner
-            android:id="@+id/account_info_year_spinner"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignTop="@+id/account_info_month_spinner"
-            android:layout_toRightOf="@+id/account_info_month_spinner" />
+                <requestFocus />
+            </TextView>
 
-        <Spinner
-            android:id="@+id/account_info_dob_day_spinner"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignTop="@+id/account_info_dob_month_spinner"
-            android:layout_toRightOf="@+id/account_info_dob_month_spinner" />
+            <TextView
+                android:id="@+id/account_info_error_label"
+                style="@style/error_label"
+                android:layout_below="@+id/account_information_input_info_label"
+                android:visibility="gone" />
 
-        <EditText
-            android:id="@+id/account_info_dob_year_field"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignTop="@id/account_info_dob_day_spinner"
-            android:layout_toRightOf="@+id/account_info_dob_day_spinner"
-            android:ems="4"
-            android:hint="@string/year_hint"
-            android:imeOptions="actionDone"
-            android:inputType="number"
-            android:maxLength="4" 
-            style="@style/edit_copy"
-            />
+            <TextView
+                android:id="@+id/account_info_card_expiration_date_label"
+                style="@style/title_copy"
+                android:layout_below="@+id/account_information_input_info_label"
+                android:text="@string/card_expiration_date_text" />
 
-        <TableRow
-            android:id="@+id/account_info_button_row"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_below="@+id/account_info_dob_year_field"
-            android:layout_centerHorizontal="true"
-            android:layout_marginTop="8dp" >
+            <TextView
+                android:id="@+id/account_info_ssn_info_label"
+                style="@style/title_copy"
+                android:layout_below="@+id/account_info_month_spinner"
+                android:text="@string/account_info_ssn_info_text" />
 
-	        <Button
-	                android:id="@+id/account_info_continue_button"
-	                android:layout_width="wrap_content"
-	                android:layout_height="wrap_content"
-	                android:layout_marginLeft="16dp"
-	                android:onClick="validateInfoAndSubmitOnSuccess"
-	                android:text="@string/continue_text" />
-        
-        </TableRow>
+            <EditText
+                android:id="@+id/account_info_ssn_input_field"
+                style="@style/edit_copy"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/account_info_ssn_info_label"
+                android:layout_toRightOf="@+id/account_info_ssn_prefix_label"
+                android:ems="4"
+                android:imeOptions="actionDone"
+                android:inputType="number"
+                android:maxLength="4" />
 
-        <Spinner
-            android:id="@+id/account_info_month_spinner"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentLeft="true"
-            android:layout_below="@+id/account_info_card_expiration_date_label" />
+            <TextView
+                android:id="@+id/account_info_ssn_prefix_label"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentLeft="true"
+                android:layout_alignTop="@id/account_info_ssn_input_field"
+                android:layout_below="@+id/account_info_ssn_info_label"
+                android:paddingTop="8dp"
+                android:text="@string/ssn_prefix"
+                android:textColor="@color/black" />
 
-        <Spinner
-            android:id="@+id/account_info_dob_month_spinner"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentLeft="true"
-            android:layout_below="@+id/account_info_dob_label" />
-        
+            <TextView
+                android:id="@+id/account_info_ssn_error_label"
+                style="@style/error_label"
+                android:layout_alignRight="@id/account_info_ssn_input_field"
+                android:layout_below="@+id/account_info_ssn_info_label"
+                android:text="@string/invalid_value" />
 
-    </RelativeLayout>
+            <TextView
+                android:id="@+id/account_info_dob_label"
+                style="@style/title_copy"
+                android:layout_below="@+id/account_info_ssn_input_field"
+                android:text="@string/account_info_dob_text" />
 
-</ScrollView>
+            <TextView
+                android:id="@+id/account_info_dob_year_error_label"
+                style="@style/error_label"
+                android:layout_alignRight="@+id/account_info_dob_year_field"
+                android:layout_below="@+id/account_info_dob_label"
+                android:text="@string/invalid_value" />
+
+            <Spinner
+                android:id="@+id/account_info_year_spinner"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignTop="@+id/account_info_month_spinner"
+                android:layout_toRightOf="@+id/account_info_month_spinner" />
+
+            <Spinner
+                android:id="@+id/account_info_dob_day_spinner"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignTop="@+id/account_info_dob_month_spinner"
+                android:layout_toRightOf="@+id/account_info_dob_month_spinner" />
+
+            <EditText
+                android:id="@+id/account_info_dob_year_field"
+                style="@style/edit_copy"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignTop="@id/account_info_dob_day_spinner"
+                android:layout_toRightOf="@+id/account_info_dob_day_spinner"
+                android:ems="4"
+                android:hint="@string/year_hint"
+                android:imeOptions="actionDone"
+                android:inputType="number"
+                android:maxLength="4" />
+
+            <TableRow
+                android:id="@+id/account_info_button_row"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/account_info_dob_year_field"
+                android:layout_centerHorizontal="true"
+                android:layout_marginTop="8dp" >
+
+                <Button
+                    android:id="@+id/account_info_continue_button"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="16dp"
+                    android:onClick="validateInfoAndSubmitOnSuccess"
+                    android:text="@string/continue_text" />
+            </TableRow>
+
+            <Spinner
+                android:id="@+id/account_info_month_spinner"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentLeft="true"
+                android:layout_below="@+id/account_info_card_expiration_date_label" />
+
+            <Spinner
+                android:id="@+id/account_info_dob_month_spinner"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentLeft="true"
+                android:layout_below="@+id/account_info_dob_label" />
+        </RelativeLayout>
+    </ScrollView>
+
+</RelativeLayout>
