US3745 Register Step 1 of 3 : Made UI updates for register step 1 to reflect 13.2 comps. Still needs nav bar and the step bar that AJ made. Should be reviewed to ensure that it meets 13.2 'requirements'.

--- a/Phone/main/res/layout/register_create_credentials.xml
+++ b/Phone/main/res/layout/register_create_credentials.xml
@@ -135,7 +135,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_below="@+id/account_info_two_id_strength_label"
-            android:text="@string/invalid_value"
+            android:text="@string/doesnt_match_records"
             android:textColor="@color/red"
             android:visibility="gone" />
 
@@ -185,7 +185,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_below="@+id/account_info_two_pass_info_label"
-            android:text="@string/invalid_value"
+            android:text="@string/doesnt_match_records"
             android:textColor="@color/red"
             android:visibility="gone" />
         
@@ -261,7 +261,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_below="@+id/account_info_two_pass_confirm_label"
-            android:text="@string/invalid_value"
+            android:text="@string/doesnt_match_records"
             android:textColor="@color/red"
             android:visibility="gone" />
 
@@ -291,7 +291,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_below="@+id/account_info_two_email_label"
-            android:text="@string/invalid_value"
+            android:text="@string/doesnt_match_records"
             android:textColor="@color/red"
             android:visibility="gone" />
 
