--- a/Phone/main/res/layout/register_create_password.xml
+++ b/Phone/main/res/layout/register_create_password.xml
@@ -83,7 +83,7 @@
 	            android:layout_width="wrap_content"
 	            android:layout_height="wrap_content"
 				android:layout_below="@+id/account_info_two_pass_info_label"
-				android:text="@string/invalid_value"
+				android:text="@string/doesnt_match_records"
 				android:visibility="gone"
 				android:textColor="@color/red"/>
 			
@@ -158,7 +158,7 @@
 	            android:layout_width="wrap_content"
 	            android:layout_height="wrap_content"
 				android:layout_below="@+id/account_info_two_pass_confirm_label"
-				android:text="@string/invalid_value"
+				android:text="@string/doesnt_match_records"
 				android:visibility="gone"
 				android:textColor="@color/red"/>
             
