--- a/Phone/main/res/layout/old_general_need_help_footer.xml
+++ b/Phone/main/res/layout/old_general_need_help_footer.xml
@@ -3,20 +3,16 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent" >
     
-    <TableRow
-	    android:id="@+id/account_info_help_row"
-	    android:layout_width="wrap_content"
-	    android:layout_height="wrap_content"
-	    android:layout_centerHorizontal="true"
-	    android:layout_alignParentBottom="true"
-        android:layout_marginBottom="65dp"
-	    android:layout_marginTop="20dp">
-
+   <RelativeLayout
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content">
+        
         <TextView
             android:id="@+id/need_help_label"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/need_help_text"
+            android:layout_centerHorizontal="true"
             android:textStyle="bold" />
 
 	    <TextView
@@ -24,11 +20,12 @@
 	        android:layout_width="wrap_content"
 	        android:layout_height="wrap_content"
 	        android:layout_marginLeft="8dp"
+	        android:layout_centerHorizontal="true"
+	        android:layout_below="@+id/need_help_label"
 	        android:text="@string/need_help_number_text"
 	        android:textColor="@color/blue"
 	        android:autoLink="phone"
 	        android:linksClickable="true" />
-            
-    </TableRow>
+    </RelativeLayout>  
 
 </merge>
