--- a/Phone/main/res/values/strings_account_info.xml
+++ b/Phone/main/res/values/strings_account_info.xml
@@ -2,7 +2,7 @@
     
     <!-- Account Info Screen 1 -->
 	<string name="account_info_one_step_text">Step 1 of 2: Enter Account Information</string>
-    <string name="account_info_dob_text">Date of Birth of Primary Cardmember:</string>
+    <string name="account_info_dob_text">Primary Cardmember\'s Birthday:</string>
 	<string name="account_info_ssn_info_text">Social Security Number of Primary Cardmember:</string>
 	<string name="account_info_bad_input_error_text">
 	    You have entered invalid information.
@@ -14,8 +14,8 @@
 	    Please contact customer service at 1&#8211;866&#8211;221&#8211;1126 for more information. 
 	</string>
 	
-	<string name="account_info_input_restrictions_label">(This is a 16&#8211;
-	    digit number starting with 6011. Do not include space or hyphens.)
+	<string name="account_info_input_restrictions_label">This is a 16&#8211;
+	    digit number starting with 6011. Do not include space or hyphens.
 	</string>
 	
 	<!-- Account Info Screen 2 -->
@@ -36,5 +36,11 @@
 	<string name="account_info_two_ids_must_match_text">User IDs must match.</string>
 	<string name="account_info_two_new_pass_confirm_text">
 	    Confirm New Password:
+	</string>
+	<string name="exp_date_placeholder">
+	    Select Month/Year
+	</string>
+	<string name="birth_date_placeholder">
+	    Select Month/Day/Year
 	</string>
 </resources>
