--- a/Phone/main/res/layout/register_help_strength.xml
+++ b/Phone/main/res/layout/register_help_strength.xml
@@ -6,22 +6,22 @@
 
     <LinearLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
-        android:orientation="vertical"
-        android:layout_marginBottom="@dimen/modal_bottom_margin" 
-    	android:paddingLeft="@dimen/forms_inner_padding"
-    	android:paddingRight="@dimen/forms_inner_padding"
-    	android:layout_marginTop="@dimen/modal_bottom_margin"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="@dimen/modal_bottom_margin"
+        android:layout_marginTop="@dimen/modal_bottom_margin"
+        android:orientation="vertical"
+        android:paddingLeft="@dimen/forms_inner_padding"
+        android:paddingRight="@dimen/forms_inner_padding" >
 
         <include
             android:id="@+id/reg_help_weak_pswd"
             layout="@layout/register_help_strength_item" />
-        
+
         <include
             android:id="@+id/reg_help_mod_pswd"
             layout="@layout/register_help_strength_item" />
-        
+
         <include
             android:id="@+id/reg_help_strong_pswd"
             layout="@layout/register_help_strength_item" />
@@ -30,15 +30,6 @@
             android:id="@+id/reg_help_footer"
             android:layout_height="fill_parent"
             layout="@layout/new_general_need_help_footer" />
-
-
-        <!--  
-        <include
-            android:id="@+id/reg_help_copyright"
-            android:layout_centerHorizontal="true"
-            android:layout_below="@id/reg_help_weak_pswd"
-            layout="@layout/old_general_copyright_footer" />
-		-->
     </LinearLayout>
 
 </ScrollView>
