--- a/Phone/main/res/layout/new_general_need_help_footer.xml
+++ b/Phone/main/res/layout/new_general_need_help_footer.xml
@@ -19,18 +19,17 @@
             android:layout_height="wrap_content"
             android:text="@string/need_help_text"
  			android:gravity="center_horizontal"
-            android:textStyle="bold" />
+			style="@style/need_help_text" />
 
 	    <TextView
 	        android:id="@+id/help_number_label"
 	        android:layout_width="fill_parent"
 	        android:layout_height="wrap_content"
 	        android:text="@string/need_help_number_text"
-	        android:textColor="@color/blue"
 	        android:autoLink="phone"
 	        android:linksClickable="true" 
-	        android:gravity="center_horizontal"/>
+	        android:gravity="center_horizontal"
+	        style="@style/need_help_number_link"/>
             
     </LinearLayout>
-
 </merge>
