--- a/Commons/main/res/values/strings_push_notification.xml
+++ b/Commons/main/res/values/strings_push_notification.xml
@@ -62,6 +62,12 @@
     <string name="misc_header">Miscellaneous</string>
     <string name="mis_text_1">These Terms of Use shall be governed by and construed in accordance with the laws of the State of Illinois, without regard to conflicts of laws provisions. Sole and exclusive jurisdiction for any action or proceeding arising out of or related to these Terms of Use shall be in an appropriate state or federal court located in the County of Lake, State of Illinois and the parties unconditionally waive their respective rights to a jury trial. Any cause of action you may have with respect to your use of Text Messages or Push Alerts must be commenced within one (1) year after the claim or cause of action arises. If for any reason a court of competent jurisdiction finds any provision of these Terms of Use, or a portion thereof, to be unenforceable, that provision shall be enforced to the maximum extent permissible so as to affect the intent of these Terms of Use, and the remainder of these Terms of Use shall continue in full force and effect. These Terms of Use constitutes the entire agreement between DFS and you with respect to Text Messages and Push Alerts and it supersedes all prior or contemporaneous communications, agreements and understandings between DFS and you with respect to the subject matter hereof. These Terms of Use do not alter in any way the terms of conditions of any other agreement you may have with DFS, or its subsidiaries or affiliates, for products, services or otherwise.</string>
     <string name="mis_text_2">These Terms of Use were last updated September 13, 2012. Please check back for updates and changes.</string>
+    <string name="or_more">or more</string>
+    <string name="minimum_amount_is">Minimum amount is </string>
+    <string name="of_your_credit_line">of your credit line</string>
+    <string name="hypen">-</string>
+    <string name="plus">+</string>
+    <string name="exclamation">!</string>
     
     <string-array name="manage_you_accounts_categories">
         <item>STMT</item>
@@ -100,20 +106,13 @@
 
 	<string name="credit_line_ammount_text">Learn when your account balance is within</string>
     
-    <string-array name="maximize_you_rewards_categories">
-        <item>SCBB</item>
-        <item>MRRW</item>
-    </string-array>
-    
-    <string-array name="maximize_your_rewards_headers">
-        <item>Rewards Reminder</item>
-        <item>Cashback Bonus Reaches Specified Amount</item>
-    </string-array>
-    
-    <string-array name="maximize_your_rewards_text">
-        <item>Learn when it\'s time to enroll for a Rewards Program</item>
-        <item></item>
-    </string-array>
+	<string name="rewards_reminder_category">5CBB</string>
+	<string name="rewards_reminder_header">Rewards Reminder</string>
+	<string name="rewards_reminder_text">Learn when it\'s time to enroll for a Rewards Program</string>
+	
+	<string name="cashback_bonus_category">MRRW</string>
+	<string name="cashback_bonus_header">Cashback Bonus Reaches Specified Amount</string>
+
     
     <string name="history_title">History</string>
     <string name="manage">Manage</string>
