--- a/Phone/main/res/layout/push_manage_header_item.xml
+++ b/Phone/main/res/layout/push_manage_header_item.xml
@@ -4,26 +4,24 @@
     android:layout_height="wrap_content"
     android:orientation="horizontal"
     android:background="@drawable/notification_list_item" 
-    android:padding="7dp">
+    android:padding="@dimen/between_related_elements_padding"
+    android:gravity="center_vertical">
     
     <TextView
         android:id="@+id/hide_view"
         android:layout_width="wrap_content"
    		android:layout_height="wrap_content"
-   		android:text="-"
-   		android:textColor="@color/blue_link"
-   		android:textSize="14sp"
-   		android:textStyle="bold"/>
+   		android:text="@string/hypen"
+   		style="@style/push_expand_item"/>
     
     <TextView 
         android:id="@+id/title"
         android:layout_width="wrap_content"
    		android:layout_height="wrap_content"
-   		android:text="Manage Your Accounts"
-   		android:textColor="@color/title"
-   		android:textSize="14sp"
-   		android:textStyle="bold"
-   		android:layout_marginLeft="7dp"
+   		style="@style/push_header_item_text"
+   		android:layout_alignTop="@+id/hide_view"
+   		android:layout_alignBottom="@+id/hide_view"
+   		android:layout_marginLeft="@dimen/between_related_elements_padding"
    		android:layout_toRightOf="@+id/hide_view"/>
 
 </RelativeLayout>
