--- a/Phone/main/res/values/dimens.xml
+++ b/Phone/main/res/values/dimens.xml
@@ -9,6 +9,22 @@
     <dimen name="nav_menu_offset">48dp</dimen>
     <dimen name="nav_menu_list_padding">10dp</dimen>
     
+    <!--  Push Toggle Box Sizes -->
+    <dimen name="push_toggle_box_width">30dp</dimen>
+    <dimen name="push_toggle_box_height">30dp</dimen>
+    <dimen name="second_toggle_margin_left">26dp</dimen>
+   	<dimen name="first_toggle_text_margin_left">9dp</dimen>
+    <dimen name="second_toggle_text_margin_left">22dp</dimen>
+    <dimen name="push_header_margin_left">30dp</dimen>
+    <dimen name="push_spinner_width">100dp</dimen>
+    <dimen name="dummy_push_box_width">100dp</dimen>
+    <dimen name="dummy_push_box_height">50dp</dimen>
+    <dimen name="push_master_toggle_height">30dp</dimen>
+   	<dimen name="push_master_toggle_width">75dp</dimen>
+   	<dimen name="push_master_toggle_margin_right">25dp</dimen>
+   	<dimen name="text_master_toggle_margin_right">50dp</dimen>
+   	<dimen name="push_toggle_text_from_center">150dp</dimen>
+    
     <!--  Discover Padding -->
     <dimen name="between_related_elements_padding">7dp</dimen>
     <dimen name="forms_inner_padding">12dp</dimen>
