US3822: Committing javadocs and some simplifying of some java code

--- a/Phone/main/res/values/styles.xml
+++ b/Phone/main/res/values/styles.xml
@@ -276,5 +276,11 @@
         <item name="android:maxLines">1</item>
         <item name="android:layout_centerHorizontal">true</item>
     </style>
+    
+    <style name="push_manage_save_success">
+        <item name="android:textColor">@color/orange_link_idicator</item>
+	    <item name="android:textStyle">bold</item>	
+        <item name="android:textSize">18sp</item>
+    </style>
 
 </resources>
