--- a/Phone/main/res/values/strings_fragment_titles.xml
+++ b/Phone/main/res/values/strings_fragment_titles.xml
@@ -9,4 +9,5 @@
     <string name="recent_activity_title">Recent Activity</string>  
     <string name="search_transactions_title">Search Transactions</string>  
     <string name="manage_payments_title">Manage Payments</string>
+    <string name="push_alert_history_title">Alerts History</string>
 </resources>
